// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MessageThread Rendering matches snapshot with no replies 1`] = `
<div>
  <div
    class="fixed inset-0 bg-black/50 flex items-center justify-end z-50"
  >
    <div
      class="w-full max-w-md h-full bg-gray-800 border-l border-white/20 flex flex-col shadow-xl"
    >
      <div
        class="p-4 border-b border-white/10 bg-gray-800/95 backdrop-blur-sm"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="text-cyan-400"
              data-testid="reply-icon"
              size="18"
            />
            <h3
              class="text-lg font-semibold text-white"
            >
              Thread
            </h3>
          </div>
          <button
            class="p-1 text-white/60 hover:text-white/80 hover:bg-white/10 rounded transition-all duration-200"
          >
            <div
              data-testid="x-icon"
              size="18"
            />
          </button>
        </div>
      </div>
      <div
        class="flex-1 overflow-y-auto"
      >
        <div
          class="p-4 border-b border-white/10 bg-white/5"
        >
          <div
            class="flex items-start space-x-3"
          >
            <div
              class="w-10 h-10 bg-gradient-to-r from-cyan-400 to-purple-500 rounded-full flex items-center justify-center text-white font-bold text-sm flex-shrink-0"
            >
              JD
            </div>
            <div
              class="flex-1 min-w-0"
            >
              <div
                class="flex items-center space-x-2 mb-1"
              >
                <span
                  class="font-medium text-white/90"
                >
                  John Doe
                </span>
                <span
                  class="text-xs text-white/50"
                >
                  1/15/2024
                   at 
                  10:00
                </span>
              </div>
              <div
                class="text-white/80 leading-relaxed mb-2"
              >
                This is the parent message
              </div>
              <div
                data-testid="message-reactions"
              >
                <button>
                  Add Reaction
                </button>
                <button>
                  Remove Reaction
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="p-4 space-y-4"
        >
          <div
            class="text-center py-8"
          >
            <div
              class="w-12 h-12 text-white/20 mx-auto mb-3"
              data-testid="reply-icon"
            />
            <p
              class="text-white/60"
            >
              No replies yet
            </p>
            <p
              class="text-white/40 text-sm mt-1"
            >
              Be the first to reply to this message
            </p>
          </div>
          <div />
        </div>
      </div>
      <div
        class="p-4 border-t border-white/10 bg-gray-800/95 backdrop-blur-sm"
      >
        <form>
          <div
            data-testid="rich-text-editor"
          >
            <textarea
              data-testid="reply-textarea"
              placeholder="Reply to John Doe..."
            />
            <button
              data-testid="submit-button"
            >
              Send
            </button>
          </div>
        </form>
      </div>
      <div
        class="px-4 py-2 border-t border-white/10 bg-white/5"
      >
        <div
          class="flex items-center justify-between text-xs text-white/50"
        >
          <div
            class="flex items-center space-x-4"
          >
            <div
              class="flex items-center space-x-1"
            >
              <div
                data-testid="users-icon"
                size="12"
              />
              <span>
                1
                 participant
              </span>
            </div>
            <div
              class="flex items-center space-x-1"
            >
              <div
                data-testid="reply-icon"
                size="12"
              />
              <span>
                0
                 
                replies
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MessageThread Rendering matches snapshot with replies 1`] = `
<div>
  <div
    class="fixed inset-0 bg-black/50 flex items-center justify-end z-50"
  >
    <div
      class="w-full max-w-md h-full bg-gray-800 border-l border-white/20 flex flex-col shadow-xl"
    >
      <div
        class="p-4 border-b border-white/10 bg-gray-800/95 backdrop-blur-sm"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="text-cyan-400"
              data-testid="reply-icon"
              size="18"
            />
            <h3
              class="text-lg font-semibold text-white"
            >
              Thread
            </h3>
            <span
              class="bg-cyan-500/20 text-cyan-400 px-2 py-1 rounded-full text-xs font-medium"
            >
              3
               
              replies
            </span>
          </div>
          <button
            class="p-1 text-white/60 hover:text-white/80 hover:bg-white/10 rounded transition-all duration-200"
          >
            <div
              data-testid="x-icon"
              size="18"
            />
          </button>
        </div>
      </div>
      <div
        class="flex-1 overflow-y-auto"
      >
        <div
          class="p-4 border-b border-white/10 bg-white/5"
        >
          <div
            class="flex items-start space-x-3"
          >
            <div
              class="w-10 h-10 bg-gradient-to-r from-cyan-400 to-purple-500 rounded-full flex items-center justify-center text-white font-bold text-sm flex-shrink-0"
            >
              JD
            </div>
            <div
              class="flex-1 min-w-0"
            >
              <div
                class="flex items-center space-x-2 mb-1"
              >
                <span
                  class="font-medium text-white/90"
                >
                  John Doe
                </span>
                <span
                  class="text-xs text-white/50"
                >
                  1/15/2024
                   at 
                  10:00
                </span>
              </div>
              <div
                class="text-white/80 leading-relaxed mb-2"
              >
                This is the parent message
              </div>
              <div
                data-testid="message-reactions"
              >
                <button>
                  Add Reaction
                </button>
                <button>
                  Remove Reaction
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="p-4 space-y-4"
        >
          <div
            class="group relative"
          >
            <div
              class="flex items-start space-x-3"
            >
              <div
                class="w-8 h-8 rounded-full flex items-center justify-center text-white font-bold text-sm bg-purple-500"
              >
                JS
              </div>
              <div
                class="flex-1 min-w-0"
              >
                <div
                  class="flex items-center space-x-2 mb-1"
                >
                  <span
                    class="text-sm font-medium text-white/90"
                  >
                    Jane Smith
                  </span>
                  <span
                    class="text-xs text-white/50"
                  >
                    10:05
                  </span>
                </div>
                <div
                  class="inline-block px-3 py-2 rounded-lg max-w-full bg-white/10 text-white border border-white/20"
                >
                  First reply
                </div>
              </div>
            </div>
            <div
              class="absolute top-0 right-0 opacity-0 group-hover:opacity-100 transition-opacity duration-200"
            >
              <div
                data-testid="message-actions"
              >
                <button>
                  React
                </button>
              </div>
            </div>
          </div>
          <div
            class="group relative"
          >
            <div
              class="flex items-start space-x-3"
            >
              <div
                class="w-8 h-8 rounded-full flex items-center justify-center text-white font-bold text-sm bg-cyan-500"
              >
                JD
              </div>
              <div
                class="flex-1 min-w-0"
              >
                <div
                  class="flex items-center space-x-2 mb-1"
                >
                  <span
                    class="text-sm font-medium text-white/90"
                  >
                    You
                  </span>
                  <span
                    class="text-xs text-white/50"
                  >
                    10:06
                  </span>
                </div>
                <div
                  class="inline-block px-3 py-2 rounded-lg max-w-full bg-cyan-500 text-white"
                >
                  Second reply from same user
                </div>
                <div
                  data-testid="message-reactions"
                >
                  <button>
                    Add Reaction
                  </button>
                  <button>
                    Remove Reaction
                  </button>
                </div>
              </div>
            </div>
            <div
              class="absolute top-0 right-0 opacity-0 group-hover:opacity-100 transition-opacity duration-200"
            >
              <div
                data-testid="message-actions"
              >
                <button>
                  Edit
                </button>
                <button>
                  Delete
                </button>
                <button>
                  React
                </button>
              </div>
            </div>
          </div>
          <div
            class="group relative"
          >
            <div
              class="flex items-start space-x-3"
            >
              <div
                class="w-8 h-8 rounded-full flex items-center justify-center text-white font-bold text-sm bg-purple-500"
              >
                JS
              </div>
              <div
                class="flex-1 min-w-0"
              >
                <div
                  class="flex items-center space-x-2 mb-1"
                >
                  <span
                    class="text-sm font-medium text-white/90"
                  >
                    Jane Smith
                  </span>
                  <span
                    class="text-xs text-white/50"
                  >
                    10:07
                  </span>
                </div>
                <div
                  class="inline-block px-3 py-2 rounded-lg max-w-full bg-white/10 text-white border border-white/20"
                >
                  Third reply
                </div>
              </div>
            </div>
            <div
              class="absolute top-0 right-0 opacity-0 group-hover:opacity-100 transition-opacity duration-200"
            >
              <div
                data-testid="message-actions"
              >
                <button>
                  React
                </button>
              </div>
            </div>
          </div>
          <div />
        </div>
      </div>
      <div
        class="p-4 border-t border-white/10 bg-gray-800/95 backdrop-blur-sm"
      >
        <form>
          <div
            data-testid="rich-text-editor"
          >
            <textarea
              data-testid="reply-textarea"
              placeholder="Reply to John Doe..."
            />
            <button
              data-testid="submit-button"
            >
              Send
            </button>
          </div>
        </form>
      </div>
      <div
        class="px-4 py-2 border-t border-white/10 bg-white/5"
      >
        <div
          class="flex items-center justify-between text-xs text-white/50"
        >
          <div
            class="flex items-center space-x-4"
          >
            <div
              class="flex items-center space-x-1"
            >
              <div
                data-testid="users-icon"
                size="12"
              />
              <span>
                2
                 participant
                s
              </span>
            </div>
            <div
              class="flex items-center space-x-1"
            >
              <div
                data-testid="reply-icon"
                size="12"
              />
              <span>
                3
                 
                replies
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
